--- a/package.json
+++ b/package.json
@@ -30,13 +30,13 @@
     "@angular/cli": "8.1.1",
     "@angular/compiler-cli": "8.1.1",
     "@angular/language-service": "8.1.1",
-    "@types/node": "8.10.50",
     "@types/jasmine": "3.3.13",
     "@types/jasminewd2": "2.0.6",
+    "@types/node": "^12.6.2",
     "codelyzer": "5.1.0",
     "jasmine-core": "3.4.0",
     "jasmine-spec-reporter": "4.2.1",
-    "karma": "4.1.0",
+    "karma": "^4.2.0",
     "karma-chrome-launcher": "3.0.0",
     "karma-coverage-istanbul-reporter": "2.0.5",
     "karma-jasmine": "2.0.1",
